--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -14,35 +14,35 @@
         <div class="list-group">
             <a class="list-group-item"><i class="fab fa-twitter"></i>
             </a>
-           <a class="list-group-item" style="display: flex;" href="public/tuiter/home.html">
+           <a class="list-group-item" style="display: flex;" href="/tuiter/home.html">
             <i class="fa-solid fa-home" style="padding:2px; margin-right:2px;"></i>
             <span class="d-none d-xl-block"> Home</span>
            </a>
-           <a class="list-group-item" style="display: flex;" >
+           <a class="list-group-item" style="display: flex;" href="/tuiter/explore/index.html">
             <i class="fa-solid fa-hashtag" style="padding:2px; margin-right:2px;"></i>
             <span class="d-none d-xl-block"> Explore</span>
            </a>
-           <a class="list-group-item" style="display: flex;" >
+           <a class="list-group-item" style="display: flex;"  href="/tuiter/notifications.html" >
             <i class="fa-solid fa-bell" style="padding:2px; margin-right:2px;"></i>
             <span class="d-none d-xl-block"> Notification</span>
            </a>
-           <a class="list-group-item" style="display: flex;" >
+           <a class="list-group-item" style="display: flex;"  href="/tuiter/messages.html" >
             <i class="fa-solid fa-envelope" style="padding:2px; margin-right:2px;"></i>
             <span class="d-none d-xl-block"> Messages</span>
            </a>
-           <a class="list-group-item" style="display: flex;" >
+           <a class="list-group-item" style="display: flex;"  href="/tuiter/bookmarks/bookmarks-css.html" >
             <i class="fa-solid fa-bookmark" style="padding:2px; margin-right:2px;"></i>
             <span class="d-none d-xl-block"> Bookmarks</span>
            </a>
-           <a class="list-group-item" style="display: flex;" >
+           <a class="list-group-item" style="display: flex;" href="/tuiter/lists.html">
             <i class="fa-solid fa-list" style="padding:2px; margin-right:2px;"></i>
             <span class="d-none d-xl-block"> Lists</span>
            </a>
-           <a class="list-group-item" style="display: flex;" >
+           <a class="list-group-item" style="display: flex;" href="/tuiter/profile.html">
             <i class="fa-solid fa-user" style="padding:2px; margin-right:2px;"></i>
             <span class="d-none d-xl-block"> Profile</span>
            </a>
-           <a class="list-group-item" style="display: flex;" >
+           <a class="list-group-item" style="display: flex;" href="/tuiter/tuit.html">
             <i class="fa-solid fa-ellipsis-h" style="padding:2px; margin-right:2px;"></i>
             <span class="d-none d-xl-block"> More</span>
            </a>
