--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -620,6 +620,21 @@ rule referring to the P tags
        <a class="nav-link disabled" href="#" tabindex="-1">Disabled</a>
    </li>
 </ul>
+<h2><a href="https://getbootstrap.com/docs/5.3/components/navs-tabs/#tabs">Pills</a></h2>
+<ul class="nav nav-pills">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled">Disabled</a>
+  </li>
+</ul>
 <h2>
     <a href="https://getbootstrap.com/docs/5.1/components/card/">
         Cards
