check with the routing

--- a/public/tuiter/nexplore/index.html
+++ b/public/tuiter/nexplore/index.html
@@ -14,7 +14,7 @@
         <div class="list-group">
             <a class="list-group-item"><i class="fab fa-twitter"></i>
             </a>
-           <a class="list-group-item" style="display: flex;" href="/tuiter/home.html">
+           <a class="list-group-item" style="display: flex;" href="/tuiter/nhome.html">
             <i class="fa-solid fa-home" style="padding:2px; margin-right:2px;"></i>
             <span class="d-none d-xl-block"> Home</span>
            </a>
