--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -13,8 +13,8 @@
           <tr valign="top">
             <td>
               <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="explore.html">Explore</a></li>
+                <li><a href="nhome.html">Home</a></li>
+                <li><a href="nexplore.html">Explore</a></li>
                 <li><a href="notifications.html">Notifications</a></li>
                 <li><a href="messages.html">Messages</a></li>
                 <li><a href="bookmarks.html">Bookmarks</a></li>
