--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="nhome.html">Home</a></li>
         <li><a href="explore/explore-css.html">Explore (CSS)</a></li>
         <li><a href="explore/index.html">Explore (BootStrap)</a></li>
         <li><a href="notifications.html">Notifications</a></li>
